[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/shared/game/characters/Girlfriend.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shared/game/HUDPackage2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shared/game/characters/Boyfriend.tscn" type="PackedScene" id=3]
[ext_resource path="res://packages/fnf/scripts/game/levels/Level_Stage.gd" type="Script" id=4]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stageback.png" type="Texture" id=5]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagecurtains.png" type="Texture" id=6]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagefront.png" type="Texture" id=7]
[ext_resource path="res://packages/fnf/characters/daddy_dearest/DaddyDearest.tscn" type="PackedScene" id=8]
[ext_resource path="res://packages/fnf/resources/graphics/week1/back.png" type="Texture" id=9]
[ext_resource path="res://packages/fnf/characters/anita/Anita2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://packages/spacedance/cam.gd" type="Script" id=11]
[ext_resource path="res://packages/fnf/resources/graphics/week1/sky1.png" type="Texture" id=12]
[ext_resource path="res://packages/fnf/resources/graphics/week1/spaceEnvironment.tres" type="Environment" id=13]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Clouds.png" type="Texture" id=14]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship2D.tscn" type="PackedScene" id=15]
[ext_resource path="res://packages/fnf/resources/graphics/week1/shipinsideT.tscn" type="PackedScene" id=16]
[ext_resource path="res://packages/fnf/characters/anita/Anita.tscn" type="PackedScene" id=17]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/ship.tscn" type="PackedScene" id=18]
[ext_resource path="res://packages/fnf/resources/graphics/week1/earth.tscn" type="PackedScene" id=19]
[ext_resource path="res://packages/fnf/resources/graphics/week1/moon.tscn" type="PackedScene" id=20]
[ext_resource path="res://packages/fnf/resources/graphics/week1/sunnnn.png" type="Texture" id=21]
[ext_resource path="res://scenes/shared/game/characters/Boyfriend3D.tscn" type="PackedScene" id=22]
[ext_resource path="res://packages/fnf/characters/anita/AnitaIconExtended.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/shared/game/characters/Girlfriend3d.tscn" type="PackedScene" id=24]
[ext_resource path="res://tools/Song_Composers.tscn" type="PackedScene" id=25]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[node name="Level_Stage" type="WorldEnvironment"]
environment = ExtResource( 13 )
script = ExtResource( 4 )
performers = {
"metronome": "gf",
"opponent": "dad",
"player": "bf"
}
character_paths = {
"bf": NodePath("Boyfriend"),
"dad": NodePath("Anita"),
"gf": NodePath("ParallaxBackground/GF/Girlfriend")
}
step_zone_paths = {
"opponent": NodePath("HUDPackage2D/HUD/Visible_Elements/Opponent_Step_Zone"),
"player": NodePath("HUDPackage2D/HUD/Visible_Elements/Player_Step_Zone")
}
hud_path = NodePath("HUDPackage2D/HUD")

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 18.258, -3.847, 6.254 )
script = ExtResource( 11 )

[node name="shipinside2" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.204, -7.82, 0.755 )

[node name="Boyfriend" parent="." instance=ExtResource( 22 )]
transform = Transform( 0.0174524, 0, -0.999848, 0, 1, 0, 0.999848, 0, 0.0174524, 22.773, -7.85589, 3.86679 )

[node name="Anita" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, 0.258819, 22.773, -4.259, -3.917 )
icon = ExtResource( 23 )

[node name="Girlfriend" parent="." instance=ExtResource( 24 )]
transform = Transform( 8.74228e-08, 0, -1, 0, 1, 0, 1, 0, 8.74228e-08, 23.6775, -7.79374, -2.59543 )
render_priority = -1
idle_frequency = 1

[node name="OuterSpace" type="Spatial" parent="."]

[node name="earth" parent="OuterSpace" instance=ExtResource( 19 )]
transform = Transform( -0.0608409, 0, 0.213938, 0, 0.222421, 0, -0.213938, 0, -0.0608409, -170.101, 2.96575, 223.787 )

[node name="ship" parent="OuterSpace" instance=ExtResource( 18 )]
transform = Transform( 0.389761, -0.0990449, 0.0675183, 0.0750295, 0.380709, 0.125354, -0.0934837, -0.107393, 0.382113, 0, 0, 0 )
visible = false

[node name="ship2" parent="OuterSpace" instance=ExtResource( 18 )]
transform = Transform( 0.407777, 0, 0, 0, 0.407777, 0, 0, 0, 0.407778, 0, 0, 0 )
visible = false

[node name="moon" parent="OuterSpace" instance=ExtResource( 20 )]
transform = Transform( 0.0892318, 0, 0, 0, 0.0892318, 0, 0, 0, 0.0892318, -174, 17, 323 )

[node name="Sun" type="Sprite3D" parent="OuterSpace"]
transform = Transform( 65.6715, 0, 0, 0, 65.6715, 0, 0, 0, 65.6715, -104, 65, 800 )
texture = ExtResource( 21 )

[node name="DirectionalLight" type="DirectionalLight" parent="OuterSpace/Sun"]
transform = Transform( -0.00508604, -0.0132575, 0.00549927, 0.0123192, -0.00103849, 0.00888991, -0.00736485, 0.00741831, 0.0110724, -1.19209e-07, 0.371034, -7.01555 )
visible = false
light_color = Color( 1, 0.890196, 0.286275, 1 )
light_energy = 4.67

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.9, 0.9 )

[node name="Stageback" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -600, -200 )
z_index = -3
texture = ExtResource( 5 )
centered = false

[node name="Stagefront" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -650, 600 )
scale = Vector2( 1.1, 1.1 )
z_index = -2
texture = ExtResource( 7 )
centered = false

[node name="Back" type="Sprite" parent="ParallaxBackground/BG"]
position = Vector2( 613.333, 492.813 )
scale = Vector2( 0.977431, 0.979282 )
texture = ExtResource( 9 )

[node name="GF" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.95, 0.95 )

[node name="Girlfriend" parent="ParallaxBackground/GF" instance=ExtResource( 1 )]

[node name="Battle" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Boyfriend" parent="ParallaxBackground/Battle" instance=ExtResource( 3 )]

[node name="Anita" parent="ParallaxBackground/Battle" instance=ExtResource( 10 )]
position = Vector2( -14, 162 )

[node name="Daddy_Dearest" parent="ParallaxBackground/Battle" instance=ExtResource( 8 )]
visible = false

[node name="FG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 0 )

[node name="Sky1" type="Sprite" parent="ParallaxBackground/FG"]
position = Vector2( 662.912, 342.997 )
scale = Vector2( 1.1072, 1.06481 )
texture = ExtResource( 12 )

[node name="Clouds" type="Sprite" parent="ParallaxBackground/FG"]
modulate = Color( 1, 1, 1, 0.356863 )
material = SubResource( 1 )
position = Vector2( 656.912, 495.997 )
scale = Vector2( 1.01549, 0.77037 )
texture = ExtResource( 14 )

[node name="Stagecurtains" type="Sprite" parent="ParallaxBackground/FG"]
visible = false
position = Vector2( -350, -150 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )
centered = false

[node name="Ship2D" parent="ParallaxBackground/FG" instance=ExtResource( 15 )]
position = Vector2( 650.912, 551.998 )
scale = Vector2( 0.761277, 0.746598 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1512.0
margin_bottom = 872.0
color = Color( 0, 0, 0, 1 )

[node name="HUDPackage2D" parent="." instance=ExtResource( 2 )]

[node name="Cam_HUD" parent="HUDPackage2D" index="2"]
current = false
zoom = Vector2( 1.111, 1.111 )

[node name="Ratings_List" parent="HUDPackage2D/HUD/Visible_Elements" index="0"]
position = Vector2( 640, 534 )

[node name="AuthorLayer" type="CanvasLayer" parent="."]

[node name="ColorRect2" parent="AuthorLayer" instance=ExtResource( 25 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 431.0
margin_bottom = 278.0
composers = "Stardust Tunes, SleP16"
songName = "Journey"

[editable path="HUDPackage2D"]
